@@ -1,13 +1,14 @@
 package org.tickup.adapters.ports.driving.impl;
 
-import org.tickup.domain.apiRequest.MailRequest;
+import jakarta.mail.internet.MimeMessage;
 import lombok.extern.slf4j.Slf4j;
-import org.primefaces.util.IOUtils;
-import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.io.Resource;
 import org.springframework.core.io.ResourceLoader;
+import org.springframework.mail.javamail.JavaMailSender;
+import org.springframework.mail.javamail.MimeMessageHelper;
 import org.springframework.stereotype.Component;
-import org.springframework.web.client.RestTemplate;
+import org.tickup.domain.apiRequest.MailRequest;
 import org.tickup.domain.ports.driving.recipients.NotifyRecipient;
 
 import java.io.IOException;
@@ -15,60 +16,71 @@ import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
 import java.util.Map;
 
-
-@Component
 @Slf4j
+@Component
 public class NotifyRecipientImpl implements NotifyRecipient {
-    private static final String JAVA_MAIL_FILE = "classpath:mail/html/";
-    private final RestTemplate restTemplate = new RestTemplate();
 
-//    @Value("${GIM_NOTIFY_URL}")
-    private String GIM_NOTIFY_URL;
+    private static final String JAVA_MAIL_FILE = "classpath:mail.html/";
 
-    @Autowired
-    private ResourceLoader resourceLoader;
+    private final ResourceLoader resourceLoader;
+    private final JavaMailSender mailSender;
+
+    @Value("${spring.mail.host}")
+    private String mailHost;
+
+    @Value("${mail.sender.email}")
+    private String senderMail;
+
+    @Value("${spring.mail.port}")
+    private String mailPort;
+    @Value("${spring.mail.username}")
+    private String mailUsername;
+    @Value("${spring.mail.password}")
+    private String mailPassword;
+
+    public NotifyRecipientImpl(ResourceLoader resourceLoader, JavaMailSender mailSender) {
+        this.resourceLoader = resourceLoader;
+        this.mailSender = mailSender;
+    }
 
     @Override
     public Boolean envoyerMail(MailRequest mRequest) {
-        return null;
+        try {
+            MimeMessage message = mailSender.createMimeMessage();
+            MimeMessageHelper helper = new MimeMessageHelper(message, true, "UTF-8");
+
+            helper.setFrom(senderMail);
+            helper.setTo(mRequest.getRecipients());
+            helper.setSubject("Tickup - Inscription");
+            helper.setText(mRequest.getContent(), true); // true = HTML
+
+            mailSender.send(message);
+            log.info("Mail envoyé avec succès à {}", mRequest.getRecipients());
+            return true;
+        } catch (Exception e) {
+            log.error("Erreur lors de l'envoi du mail", e);
+            return false;
+        }
     }
 
     @Override
     public String formatMail(String name, Map<String, String> params) throws IOException {
-        try {
-            // Vérification du nom du fichier
-            if (name == null) {
-                throw new IOException("Le nom du fichier ne peut être null");
-            }
+        if (name == null) throw new IOException("Le nom du fichier ne peut être null");
 
-            // Chargement de la ressource
-            Resource resource = resourceLoader.getResource("classpath:mail/html/" + name);
-            if (!resource.exists()) {
-                throw new IOException(String.format("Le fichier %s est introuvable.", name));
-            }
+        Resource resource = resourceLoader.getResource(JAVA_MAIL_FILE + name);
+        if (!resource.exists()) throw new IOException(String.format("Le fichier %s est introuvable.", name));
 
-            // Lecture du contenu du fichier
-            String fileContent;
-            try (InputStream inputStream = resource.getInputStream()) {
-                fileContent = IOUtils.toString(inputStream, StandardCharsets.UTF_8);
-            }
+        String fileContent;
+        try (InputStream inputStream = resource.getInputStream()) {
+            fileContent = new String(inputStream.readAllBytes(), StandardCharsets.UTF_8);
+        }
 
-            // Remplacement des placeholders par les valeurs des paramètres
+        if (params != null) {
             for (Map.Entry<String, String> param : params.entrySet()) {
                 fileContent = fileContent.replace(param.getKey(), param.getValue());
             }
-
-            return fileContent;
-        } catch (Exception e) {
-            // Journalisation de l'erreur
-
-
-            // Relance de l'exception
-//            log.error("Une erreur est survenue au niveau du serveur", e);
-            return null;
         }
 
+        return fileContent;
     }
-
-
 }
